# arena-bench

./:  setup.sh  .rosinstall  README.md  setup.sh
arena_bringup/launch/: start_arena_gazebo.launch
arena_bringup/launch/sublaunch_testing/: robots.launch
arena_navigation/all_in_one_global_planner_interface/: CMakeLists.txt  package.xml
simulator_setup/: CMakeLists.txt  package.xml
simulator_setup/worlds/map2/worlds/: map2.dae
task_generator/scripts/: task_generator_node.py
task_generator/task_generator/: tasks.py
